--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="cancel">Cancel</string>
     <string name="edit_item">Edit Item</string>
     <string name="done">Done</string>
-    <string name="title">Title</string>
+    <string name="tags">Title</string>
     <string name="price">Price</string>
     <string name="all">All</string>
     <string name="account">Account</string>
@@ -25,6 +25,11 @@
     <string name="inbox">Inbox</string>
     <string name="active">Active</string>
     <string name="not_active">Not Active</string>
+    <string name="nothingToShow">Currently Nothing to Show</string>
+    <string name="loading">Loading...</string>
+    <string name="profile">Profile</string>
+    <string name="logout">Logout</string>
+    <string name="noMessages">No Messages</string>
 
 
     <integer-array name="img_id_arr">
