--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,22 +19,31 @@
     <string name="done">Done</string>
     <string name="tags">Title</string>
     <string name="price">Price</string>
+    <string name="prices">Prices</string>
     <string name="all">All</string>
     <string name="account">Account</string>
     <string name="settings">Settings</string>
     <string name="inbox">Inbox</string>
     <string name="active">Active</string>
-    <string name="not_active">Not Active</string>
+    <string name="not_active">Inactive</string>
+    <string name="description">Description</string>
     <string name="nothingToShow">Currently Nothing to Show</string>
     <string name="loading">Loading...</string>
+    <string name="hour">Hour</string>
+    <string name="day">Day</string>
+    <string name="week">Week</string>
+    <string name="extras">Extras</string>
+    <string name="location">Location</string>
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="noMessages">No Messages</string>
+    <string name="unauthorized">Unauthorized, please login again</string>
+    <string name="book_now">Book Now</string>
+    <string name="back">Back</string>
+    <string name="listing">Listing</string>
 
 
     <integer-array name="img_id_arr">
-        <item>@drawable/number_one</item>
-        <item>@drawable/number_two</item>
     </integer-array>
 
     <string-array name="categories">
@@ -42,6 +51,5 @@
         <item>Photography</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
